--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
+						<h1>LU WIECZ</h1>
 						<p>Aqui você encontra as coisas que tenho para vender, e aqui <a href="https://www.instagram.com/borocox0/">@borocox0</a> você encontra todo o resto.<br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -36,15 +35,15 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
+							<li class="active"><a href="index.html">ROUPAS</a></li>
+							<li><a href="generic.html">QUADROS</a></li>
+							<li><a href="generic.html">POPRTFÓLIO</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
